# staminator

./: CMakeLists.txt  README.md
resources/: resources.qrc
src/cpp/: main.cpp
src/qml/: main.qml
